--- a/fujimura-eng-solutions_Version2.html
+++ b/fujimura-eng-solutions_Version2.html
@@ -106,7 +106,7 @@
                     <div class="text-blue-600 mb-4">
                         <i class="fas fa-file-alt text-4xl"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3">Laudos Técnicos e ARTs</h3>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">Laudos Técnicos e ART</h3>
                     <p class="text-gray-600">Elaboração de laudos técnicos especializados e Anotações de Responsabilidade Técnica (ART) para diversos segmentos da engenharia.</p>
                 </div>
                 
@@ -164,7 +164,7 @@
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-10 md:mb-0 md:pr-10">
                     <div class="relative">
-                        <img src="https://images.unsplash.com/photo-1581093450027-c0b32d8c2c49?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Engenheiro trabalhando" class="rounded-lg shadow-lg w-full">
+                        <img src="https://c4.wallpaperflare.com/wallpaper/91/759/794/the-sky-light-night-lights-excavator-hd-wallpaper-preview.jpg"Manutenção de Maquinas" class="rounded-lg shadow-lg w-full">
                         <div class="absolute -bottom-5 -right-5 bg-blue-600 text-white p-4 rounded-lg shadow-lg">
                             <i class="fas fa-award text-4xl"></i>
                         </div>
@@ -254,7 +254,7 @@
                                 </div>
                                 <div>
                                     <h4 class="font-bold text-gray-800">Website</h4>
-                                    <p class="text-gray-600">fujimuraengenharsolucoes.com.br</p>
+                                    <p class="text-gray-600">www.fujimuraengenharsolucoes.com.br</p>
                                 </div>
                             </div>
                         </div>
